# s4-pipeline-ops

./: .env.example  .gitignore  CLAUDE_CODE_HANDOFF.md  CLAUDE_CODE_HANDOFF_BENCHMARKS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
docker/: Dockerfile  docker-compose.yml
grafana/: dashboard.json
scripts/: demo.py  download_models.py
src/: cli.py
src/alerting/: engine.py
src/api/: app.py  prometheus.py  routes.py
src/benchmarks/: __init__.py  configs.py  prometheus.py  runner.py
src/benchmarks/inference/: __init__.py  llamacpp_bench.py  ollama_bench.py  vllm_bench.py
src/benchmarks/metrics/: __init__.py  latency.py  memory.py  quality.py  throughput.py
src/benchmarks/prompts/: eval_prompts.json
src/benchmarks/report/: __init__.py  csv_export.py  markdown.py  plots.py
src/collectors/: gpu.py  metrics_store.py
src/dashboard/: analytics.py  health.py
src/dashboard/templates/: index.html
src/models/: schemas.py
src/multinode/: agent.py  aggregator.py
src/scheduler/: manager.py  progress.py
tests/: conftest.py  test_alerting.py  test_analytics.py  test_benchmarks.py  test_collectors.py  test_models.py  test_progress.py
